play align problem fixed #8

--- a/frontend/src/app/play/play.component.scss
+++ b/frontend/src/app/play/play.component.scss
@@ -2,7 +2,12 @@
 
 #mainplayingcard {
   color:blue;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+  border-radius: 25px;
+}
 
+#mainplayingcard >* {
+  margin:1px;
 }
 
 #playingheader {
